# dictator

./: .gitignore  CODE_SIGNING.md  LICENSE  MODELS.md  PACKAGING.md  README.md  SETUP.md  SETUP_CODE_SIGNING.md  THIRD_PARTY_NOTICES  build_app.sh  icon.icns  pyproject.toml  requirements.txt  run_dictator.py  setup.py  setup.sh  start.sh
.github/workflows/: build.yml
docs/: ARCHITECTURE.md  DECISIONS.md  PROGRESS.md
src/dictator/: app.py  audio.py  health_monitor.py  hotkey.py  insertion.py  main.py  models.py  storage.py  transcription.py
src/dictator/services/: __init__.py  audio_converter.py  audio_processor.py  llm_corrector.py  model_manager.py
src/dictator/ui/: file_processor.py  history.py  model_download_dialog.py  settings.py
